--- a/src/classes/CadenceService.cls
+++ b/src/classes/CadenceService.cls
@@ -1049,6 +1049,7 @@ global  without sharing class CadenceService {
                 }
             }catch(exception e){ 
                 
+            Contacts.flag =false;
             }
             
         }
