--- a/src/classes/LookupFieldController.cls
+++ b/src/classes/LookupFieldController.cls
@@ -5,8 +5,19 @@ public class LookupFieldController {
         @AuraEnabled public String userName;
         @AuraEnabled public String userId;
     } 
+	
+	public class DandBCompanyListWrapper{
+        @AuraEnabled public String Name;
+        @AuraEnabled public String Id;
+    } 
+	
     @AuraEnabled
     public static List<LookupFieldController.UserListWrapper> getUserWrapper(){
         return CadenceService.getUserWrapperList();
+    }
+	
+	@AuraEnabled
+    public static List<LookupFieldController.DandBCompanyListWrapper> getDandBCompanyWrapper(){
+        return CadenceService.getDandBCompanyWrapperList();        
     }
 }
