Code committed for SFDC-90 with required changes of Selector and Service class

--- a/src/classes/CadenceSelector.cls
+++ b/src/classes/CadenceSelector.cls
@@ -200,8 +200,14 @@ public with sharing class CadenceSelector {
         return [select id, Name  from user where ReceivesAdminInfoEmails = true];
     }
 	
-	public static List<DandBCompany> getDandBCompanyList(){
-        return [select id, Name  from DandBCompany];
+	public static List<SObject> getDandBCompanyList(){ 
+        Schema.sObjectType sObjectName = Schema.getGlobalDescribe().get(CadenceConstants.DB_OBJECT_NAME);
+        if (sObjectName != null){
+            String query = 'Select id, Name  from ' + CadenceConstants.DB_OBJECT_NAME ;
+            return Database.query(query); 
+        }else{
+            return new List<SObject>();
+        }
     }
     
      /**
