Updated LookupFieldControllerTest class.

--- a/src/classes/LookupFieldControllerTest.cls
+++ b/src/classes/LookupFieldControllerTest.cls
@@ -4,7 +4,7 @@ public class LookupFieldControllerTest {
     public static void getUserWrapperTest(){
         LookupFieldController.UserListWrapper userwrap;
         Test.startTest();
-        LookupFieldController.getUserWrapper();
+        LookupFieldController.getUserAndDandBWrappers();
         Test.stopTest();
     }
 }
