--- a/src/classes/LoggerTest.cls
+++ b/src/classes/LoggerTest.cls
@@ -1,9 +1,21 @@
 @isTest
 public class LoggerTest {
 	@isTest
-    public static void testCreate(){
-        //EnableLogger__c enableLoggerSettings =new EnableLogger__c(IsEnabled__c=true);
-        //insert enableLoggerSettings;
-        Logger.create('Test title', 'Test description');
+    public static void test_insertLog_loggerSetting_enabled(){
+        Sequence_Logger__c enableLoggerSettings =new Sequence_Logger__c(IsEnabled__c=true);
+        insert enableLoggerSettings;
+        
+        Logger.buildLog('Test title', 'Test description');
+        Logger.insertLog();
+        
+        Logger__c logger = [Select Description__c from Logger__c];
+        system.assertEquals('Test description', logger.Description__c);
+    }
+
+    public static void test_insertLog_loggerSetting_disabled(){
+        Logger.buildLog('Test title', 'Test description');
+        Logger.insertLog();
+        Logger__c logger = [Select Description__c from Logger__c];
+        system.assertEquals('', logger.Description__c);
     }
 }
